Add package metadata to `go_repository`s
All targets in a `go_repository` with generated build files are tagged with a `package_info` automatically created by the repo rule.

This PR does not add any license information yet.

--- a/tests/bcr/go_mod/BUILD.bazel
+++ b/tests/bcr/go_mod/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@gazelle//:def.bzl", "gazelle", "gazelle_test")
+load(":tests.bzl", "starlark_tests")
 
 # gazelle:go_naming_convention import
 # gazelle:go_naming_convention_external import
@@ -7,4 +8,8 @@ gazelle(name = "gazelle")
 gazelle_test(
     name = "gazelle_test",
     workspace = "//:BUILD.bazel",
+)
+
+starlark_tests(
+    name = "starlark_tests",
 )
