--- a/tests/bcr/go_mod/MODULE.bazel
+++ b/tests/bcr/go_mod/MODULE.bazel
@@ -16,7 +16,9 @@ local_path_override(
 
 bazel_dep(name = "protobuf", version = "23.1", repo_name = "my_protobuf")
 bazel_dep(name = "rules_go", version = "0.42.0", repo_name = "my_rules_go")
+bazel_dep(name = "rules_license", version = "0.0.8")
 bazel_dep(name = "rules_proto", version = "6.0.0-rc2", repo_name = "my_rules_proto")
+bazel_dep(name = "rules_testing", version = "0.6.0")
 
 go_sdk = use_extension("@my_rules_go//go:extensions.bzl", "go_sdk")
 
